--- a/src/wozniewicz/analyzer/analyzer.properties
+++ b/src/wozniewicz/analyzer/analyzer.properties
@@ -1,11 +1,36 @@
 # This is the configuration file for the rest of the app
 
+## Config ##
 
-# keyword which at least one class of projects has
+# Keyword(s) to search for.
+# If multiple, separate with a single space
 searchkeyword=
 
 # "Java" for java, "C%23" for C#
 searchlanguage=Scala
 
-			
-	
+# Number of lines for a project to "qualify" as a real one
+minlines=500
+
+
+# number of threads for executing downloading and uncompressing projects.
+threads=4
+
+
+
+
+
+
+## Directories ##
+
+# New downloads folder (used by downloader, and taken from by analyzer)
+downloadroot=C:/PROJECTS/PURE/downloads/new/
+
+# Projects which have been processed and passed the LOC test go here
+processroot=C:/PROJECTS/PURE/downloads/done/
+
+# Small projects with too few lines of code go here
+rejectroot=C:/PROJECTS/PURE/downloads/reject/
+
+# Folder for output (HTML tables)
+outputroot=C:/PROJECTS/PURE/output/
