--- a/bin/wozniewicz/analyzer/analyzer.properties
+++ b/bin/wozniewicz/analyzer/analyzer.properties
@@ -2,12 +2,14 @@
 
 ## Config ##
 
-# Keyword(s) to search for.
+# Keyword(s) to search for, once files are downloaded
 # If multiple, separate with a single space
-searchkeyword=
+searchkeyword=actor
 
 # "Java" for java, "C%23" for C#
+# Language to include in search query on github
 searchlanguage=Scala
+searchkeywordquery=
 
 # Number of lines for a project to "qualify" as a real one
 minlines=500
@@ -27,10 +29,11 @@ threads=4
 downloadroot=C:/PROJECTS/PURE/downloads/new/
 
 # Projects which have been processed and passed the LOC test go here
-processroot=C:/PROJECTS/PURE/downloads/done/
+finishedroot=C:/PROJECTS/PURE/downloads/done/
 
 # Small projects with too few lines of code go here
 rejectroot=C:/PROJECTS/PURE/downloads/reject/
+
 
 # Folder for output (HTML tables)
 outputroot=C:/PROJECTS/PURE/output/
