--- a/src/wozniewicz/githubtool/app.properties
+++ b/src/wozniewicz/githubtool/app.properties
@@ -2,9 +2,11 @@
 
 ## Config ##
 
-# Keyword to search for, once files are downloaded
-# Projects without this keyword are deleted
-searchkeyword=scala.actor
+# Keywords to search for in downloaded projects (file-by-file)
+# The first keyword is a "filter" -- projects without it will not be present in results
+# The rest are used for other data
+# Separate with a '|'
+searchkeyword=imports scala.actor|init
 
 # "Java" for java, "C%23" for C#
 # Language to include in search query on github
