--- a/bin/wozniewicz/githubtool/ews.properties
+++ b/bin/wozniewicz/githubtool/ews.properties
@@ -31,5 +31,12 @@ threads=4
 # New downloads folder (used by downloader, and taken from by analyzer)
 downloadroot=/media/ScalaActors1
 
+# Projects which have been processed and passed the LOC test go here
+finishedroot=../output/downloads/done/
+
+# Small projects with too few lines of code go here
+rejectroot=../output/downloads/reject/
+
+
 # Folder for output (HTML tables)
 outputroot=../output/html/
