--- a/src/wozniewicz/githubtool/app.properties
+++ b/src/wozniewicz/githubtool/app.properties
@@ -2,11 +2,16 @@
 
 ## Config ##
 
+# Is the operating system windows? (true/false)
+windows=true
+
 # Keywords to search for in downloaded projects (file-by-file)
 # The first keyword is a "filter" -- projects without it will not be present in results
 # The rest are used for other data
-# Separate with a '|'
-searchkeyword=imports scala.actor|init
+searchkeyword=akka.actor$init$ask$Runnable$TypedActor$remote
+
+# Define what delimits keywords above (one character)
+searchdelimeter=$
 
 # "Java" for java, "C%23" for C#
 # Language to include in search query on github
@@ -24,7 +29,8 @@ threads=4
 ## Directories ##
 
 # New downloads folder (used by downloader, and taken from by analyzer)
-downloadroot=../output/downloads/new/
+
+downloadroot=../akkaappsAll/
 
 # Projects which have been processed and passed the LOC test go here
 finishedroot=../output/downloads/done/
