--- a/bin/wozniewicz/githubtool/cdscala.properties
+++ b/bin/wozniewicz/githubtool/cdscala.properties
@@ -8,7 +8,8 @@ windows=true
 # Keywords to search for in downloaded projects (file-by-file)
 # The first keyword is a "filter" -- projects without it will not be present in results
 # The rest are used for other data
-searchkeyword=akka.actor$become$?$ask$!!$akka.remote
+searchkeyword=e$Thread$Runnable
+
 
 # Define what delimits keywords above (one character)
 searchdelimeter=$
@@ -29,8 +30,7 @@ threads=4
 ## Directories ##
 
 # New downloads folder (used by downloader, and taken from by analyzer)
-
-downloadroot=../akkaappsAll/
+downloadroot=../scalaApps/
 
 # Projects which have been processed and passed the LOC test go here
 finishedroot=../output/downloads/done/
