--- a/bin/wozniewicz/githubtool/ews.properties
+++ b/bin/wozniewicz/githubtool/ews.properties
@@ -3,15 +3,15 @@
 ## Config ##
 
 # Is the operating system windows? (true/false)
-windows=false
+windows=true
 
 # Keywords to search for in downloaded projects (file-by-file)
 # The first keyword is a "filter" -- projects without it will not be present in results
 # The rest are used for other data
-searchkeyword=actor$$import scala.actor$$init
+searchkeyword=scala.actors$?!$scala.actors.remote
 
 # Define what delimits keywords above
-searchdelimeter=$$
+searchdelimeter=$
 
 # "Java" for java, "C%23" for C#
 # Language to include in search query on github
@@ -29,7 +29,7 @@ threads=4
 ## Directories ##
 
 # New downloads folder (used by downloader, and taken from by analyzer)
-downloadroot=/media/ScalaActors1
+downloadroot=../scalaApps
 
 # Projects which have been processed and passed the LOC test go here
 finishedroot=../output/downloads/done/
