--- a/src/wozniewicz/githubtool/app.properties
+++ b/src/wozniewicz/githubtool/app.properties
@@ -8,7 +8,7 @@ windows=true
 # Keywords to search for in downloaded projects (file-by-file)
 # The first keyword is a "filter" -- projects without it will not be present in results
 # The rest are used for other data
-searchkeyword=akka.actor$init$ask$Runnable$TypedActor$remote$stop$?
+searchkeyword=akka.actor$become$?$ask$!!$akka.remote
 
 # Define what delimits keywords above (one character)
 searchdelimeter=$
