--- a/src/wozniewicz/githubtool/cdscala.properties
+++ b/src/wozniewicz/githubtool/cdscala.properties
@@ -8,7 +8,7 @@ windows=true
 # Keywords to search for in downloaded projects (file-by-file)
 # The first keyword is a "filter" -- projects without it will not be present in results
 # The rest are used for other data
-searchkeyword=e$Thread$Runnable
+searchkeyword=actor$Thread$Runnable
 
 
 # Define what delimits keywords above (one character)
@@ -30,6 +30,7 @@ threads=4
 ## Directories ##
 
 # New downloads folder (used by downloader, and taken from by analyzer)
+# Projects folder
 downloadroot=../scalaApps/
 
 # Projects which have been processed and passed the LOC test go here
